# volt

./: .anchor  .build.bat  .env.example  .gitignore  .gitlab-ci.yml  .volt_tool_cache.json  ADVERSARIAL_INTEGRITY_REPORT.md  AGENTS.md  ARCHITECTURE.md  CODEBASE_MAP.md  CODE_QUALITY_REPORT.md  CODE_QUALITY_REVIEW.md  Cargo.toml  Dockerfile  FILE_MANIFEST.txt  GAP_ANALYSIS.md  LICENSE  Makefile  README.md  REFACTOR_AUDIT.md  code_metrics.csv  docker-compose.db.yml  docker-compose.yml  fix_review.py  p_value.txt  p_value_distribution.html  prepare-sqlx.sh  summary.txt  trigger-ci.txt
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.netlify/: netlify.toml  state.json
blueprints/: README.md  allam_2_7b.toml  gemma4_e2b_voice.toml  gpt_oss_120b.toml  gpt_oss_120b_reasoning.toml  gpt_oss_20b.toml  gpt_oss_safeguard_20b.toml  groq_compound.toml  groq_compound_mini.toml  llama3_8b_local.toml  llama_31_8b.toml  llama_33_70b.toml  llama_4_scout.toml  llama_4_scout_mcp.toml  llama_4_scout_vision.toml  nim_deepseek_v4_flash.toml  nim_deepseek_v4_pro.toml  nim_gemma3_27b.toml  nim_gemma4_31b.toml  nim_glm5_1.toml  nim_kimi_k2.toml  nim_llama31_70b.toml  nim_llama31_8b.toml  nim_llama33_70b.toml  nim_minimax_m25.toml  nim_minimax_m27.toml  nim_mixtral_8x22b.toml  nim_nemotron3_nano_omni.toml  nim_nemotron3_super_120b.toml  nim_phi4_flash_reasoning.toml  nim_phi4_mini.toml  nim_qwen35_122b.toml  nim_qwen_coder_32b.toml  nim_qwq_32b.toml  nim_step_37_flash.toml  ollama_deepseek_v3_2.toml  ollama_deepseek_v4_flash.toml  ollama_deepseek_v4_pro.toml  ollama_devstral_small_2.toml  ollama_gemini3_flash.toml  (+28 more)
docs/: DIOXUS_ARCHITECTURE.md  api.md  architecture.md  environment-variables.md  marketplace.md  nvidia_nim_catalog.md  security.md  tool-gating.md  vllm-deployment.md  vllm-roadmap.md
docs/audit/: audit-of-changes-2026-06-09.md  everything-as-rag-2026-06-09.md  over-engineering-2026-06-09.md  provider-onboarding-2026-06-09.md
docs/internal/: GROQ_INTEGRATION_MANUAL.md  code-quality-report.md  codebase-map.md  refactor-audit.md  volt-tasks.md
examples/: README.md
examples/github-pr-reviewer/: SKILL.md  test_skill.py
examples/manifests/: cloud-devops-k8s-audit.json  domain-compliance-soc2-reader.json
installers/: build-dist.sh  install.ps1  install.sh
migrations/: 0001_core.sql  0002_jobs_and_routines.sql  0002_skills.sql  0003_storage_optimizations.sql  0004_audit_log.sql
paper/: benchmarks.md  cli_ux_audit.md  draft.md  linkedin_newsletter.md  paper.bib  tool_libraries_report.md  volt_arxiv.html  volt_arxiv.tex
presets/: gemma4-e2b.toml  gemma4-e4b.toml  qwen3.5-9b.toml
proto/: mcp.proto
public/: DNS-CONFIGURATION.md  SETUP-CUSTOM-DOMAIN.md  index.html
scripts/: bootstrap_db.sh  package_sample.sh  run_sandbox.sh
skills/: catalog.json
src/: attenuation.rs  capability.rs  checkpoint_journal.rs  code_parser.rs  command_guard.rs  config.rs  context.rs  db.rs  embedding.rs  eval.rs  events.rs  graph_rag.rs  heartbeat.rs  hnsw_index.rs  http_client.rs  leak_detector.rs  lib.rs  local_embed.rs  main.rs  metrics.rs  models.rs  network_policy.rs  orchestrator.rs  registry.rs  safety_layer.rs  sandbox.rs  session.rs  skill_scorer.rs  skills.rs  telemetry.rs  test_utils.rs  tool_failure_tracker.rs  tui.rs  turbovec_index.rs  validation.rs  vector_index.rs  worker.rs
src/agent/: blueprint.rs  builder.rs  compression.rs  context.rs  cot.rs  hooks.rs  loop_rs.rs  mod.rs  model_registry.rs  multimodal.rs  preset.rs  prompt.rs  prompt_builder.rs  router.rs  run.rs  tool_parser.rs
src/channels/: mod.rs  telegram.rs  webhook.rs
src/commands/: agent.rs  agent_run.rs  agent_tui.rs  config.rs  daemon.rs  doctor.rs  eval.rs  init.rs  mcp.rs  mod.rs  provision.rs  serve.rs  skills.rs  tools.rs  workflow.rs  worktree.rs
src/context/: clustering.rs  eviction.rs  mod.rs  persistence.rs  search.rs
src/db/: context.rs  executions.rs  memory.rs  mod.rs  routines.rs  skills.rs  tools.rs
src/embedding/: mod.rs  providers.rs
src/jobs/: mod.rs  monitor.rs
src/llm/: anthropic.rs  mod.rs  ollama.rs  openai.rs  poll_async.rs  provider.rs  provider_detector.rs  riva.rs  role_registry.rs  vllm.rs
src/mcp/: client.rs  grpc.rs  mod.rs  server.rs
src/routines/: engine.rs  mod.rs
src/secrets/: encrypted.rs  mod.rs
src/skills/: catalog.rs  importer.rs  mod.rs
src/tools/: archive_tool.rs  bash.rs  browser_tool.rs  chart_tool.rs  csv_tool.rs  delegate.rs  desktop_tool.rs  edit.rs  final_answer.rs  git_tool.rs  glob_tool.rs  grep_tool.rs  json_tool.rs  litertlm.rs  llamacpp.rs  mcp_client.rs  memory_tool.rs  mod.rs  mtp.rs  nvidia_cloud_functions.rs  ollama_web_tools.rs  path.rs  pdf_tool.rs  read_tool.rs  registration.rs  registry.rs  scrape_tool.rs  screenshot.rs  searchhq.rs  (+7 more)
templates/: base.html  index.html
tests/: agent_tests.rs  attenuation_tests.rs  bfcl_data.json  bfcl_pipeline.rs  cli_integration_tests.rs  daemon_tests.rs  distractors.json  event_bus_tests.rs  gaia_bench.rs  hooks_integration.rs  network_policy_tests.rs  professional_workflows.rs  profile_mode_tests.rs  program_bench.rs  real_world_benchmarks.rs  searchhq_all_tools_test.rs  skill_scorer_tests.rs  tool_failure_tests.rs  validation_tests.rs  webhook_channel_tests.rs  webui_e2e.rs  workflow_bench.rs  worktree_integration.rs
volt-bfcl/: ABLATION.md  arg_validator.py  benchmark.py  context_ablation.py  context_store.py  gaia_benchmark.py  mcp_distractors.py  multi_turn_bench.py  program_bench.py  stats_utils.py  volt_bench.py
(+58 files in other folders)
