[package]
name = "volt"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Volt — Rust agent framework with MCP, memory, sandboxed tools, and multi-agent orchestration"

[features]
testutils = []
tools-screenshot = ["windows-capture", "image"]
tools-pdf = []
tools-desktop = ["enigo"]
tools-browser = ["headless_chrome"]
tools-ast = ["tree-sitter", "tree-sitter-rust", "tree-sitter-python", "tree-sitter-typescript"]
tools-local-embeddings = ["tract-onnx", "hf-hub", "tokenizers", "ndarray"]
tools-telegram = ["teloxide"]
default = ["tools-local-embeddings"]

[lib]
name = "volt"
path = "src/lib.rs"

[[bin]]
name = "volt"
path = "src/main.rs"

[[bin]]
name = "bfcl_bench"
path = "src/bin/bfcl_bench.rs"

[dependencies]
anyhow = "1"
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
chrono-tz = "0.10"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
hex = "0.4"
hmac = "0.12"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"], default-features = false }
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
sha2 = "0.10"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "sqlite", "chrono", "json", "uuid"] }
thiserror = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "time", "fs", "io-util", "io-std", "sync", "signal", "net"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4", "serde"] }
ratatui = "0.29"
crossterm = "0.28"
regex = "1"
walkdir = "2"
ignore = "0.4"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["cors"] }
axum = { version = "0.8", features = ["macros"] }
url = "2"
syntect = { version = "5", default-features = false, features = ["default-syntaxes", "default-themes", "regex-fancy"] }
similar = "2"
toml = "0.8"
scraper = "0.21"
rand = "0.8"
csv = "1.3"
tar = "0.4"
flate2 = "1.1"
windows-capture = { version = "2", optional = true }
image = { version = "0.25", optional = true, default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
enigo = { version = "0.3", optional = true }
headless_chrome = { version = "1.0", optional = true }
tiktoken-rs = "0.11"
dashmap = "6"
petgraph = "0.7"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio", "trace"] }
tracing-opentelemetry = "0.28"
opentelemetry-stdout = { version = "0.27", features = ["trace"] }
opentelemetry-otlp = { version = "0.27", features = ["trace", "http-proto", "reqwest-client"] }
tree-sitter = { version = "0.24", optional = true }
tree-sitter-rust = { version = "0.23", optional = true }
tree-sitter-python = { version = "0.23", optional = true }
tree-sitter-typescript = { version = "0.23", optional = true }
tract-onnx = { version = "0.22", optional = true }
hf-hub = { version = "0.4", optional = true }
tokenizers = { version = "0.21", optional = true }
ndarray = { version = "0.16", optional = true }

# Phase 3: Jobs, routines, channels
cron-parser = "0.5"  
teloxide = { version = "0.17", features = ["macros"], optional = true }

[dev-dependencies]
tempfile = "3"
mockall = "0.13"
wiremock = "0.6"
